--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.4",
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^8.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-markdown": "^4.0.6",
     "react-scripts": "2.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "next start -p 8000"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +24,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "cross-env": "^5.2.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
